<resources>
    <string name="app_name">GamingServer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="item_1">Item 1</string>
    <string name="string_item_1" />
    <string name="string_string_item_1" />
    <string name="cast">Cast</string>
    <string name="menu">****Menu****</string>
    <string name="detect_controller">Detect Controller</string>
    <string name="video">Video</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="start_stream">Start Stream</string>
    <string name="stop_stream">Stop Stream</string>
    <string name="logout">Logout</string>
    <string name="Apply">Button</string>
    <string name="apply">Apply</string>
    <string name="hd">HD</string>
    <string name="hdready">HDReady</string>
    <string name="standard_def">Standard Def</string>
    <string name="video_quality">Video Quality</string>
</resources>
